fix (board): fix dark mode colors

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -5,6 +5,7 @@ html.light {
   --badge-box-shadow: #42445a;
   --project-bg-color: #f5f5f5;
   --project-box-shadow: #42445a;
+  --board-separator-color: #000000;
 }
 html.dark {
   --grid-bg-color: #282828e6;
@@ -13,4 +14,5 @@ html.dark {
   --badge-box-shadow: #ffffff;
   --project-bg-color: #1b1b1b;
   --project-box-shadow: #a7a5a548;
+  --board-separator-color: #ffffff;
 }
